
Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)

	* kdb5_create.c : Remove krb5_enctype references, and replace with 
		krb5_keytype where appropriate.

Wed Aug 9 18:05:44 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb5_create.c - Use default key/salt tuple list or one generated from
		reading KDC profile to determine which key types to make for
		the tgt principal.


Mon Jul 31 15:45:49 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb5_create.c - Use new admin string conversion routines.
	* kdb5_create.M - Remove "string representation of integer" for keytype
		and etype.


Thu Jul 27 02:59:05 1995   Chris Provenzano (proven@mit.edu)

	* kdb5_create.c : Use new kdb format.

Mon Jul 17 14:58:00 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Add KADM library.
	* kdb5_create.c - Add KDC profile reading/handling as a supplement to
		command line supplied arguments.  Change calling sequence to
		krb5_db_fetch_mkey().


Fri Jul 7 15:36:00 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove all explicit library handling and LDFLAGS.
	* configure.in - Add USE_KDB5_LIBRARY and KRB5_LIBRARIES.


Fri Jun 30 14:30:07 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Add --with-dbm to select between Berkeley and DBM
		KDC database format.


Thu Jun 15 15:29:39 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
		Also, remove DBMLIB, it wasn't used.
	* configure.in - Remove checks for dbm, they are not needed any
		more with the Berkeley database code.  Add shared library
		usage check.

Fri Jun  9 18:14:21 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Thu Mar  2 12:18:02 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 11:52:18 1995  Theodore Y. Ts'o  <tytso@dcl>
